@@ -1,7 +1,7 @@
 /* Copyright (c) 2018 Acrolinx GmbH */
 package com.acrolinx.sidebar.pojo.document.externalcontent;
 
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
@@ -9,11 +9,7 @@ class ExternalContentTest {
   @Test
   void toStringTest() {
     ExternalContent externalContent =
-        new ExternalContent(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList());
+        new ExternalContent(List.of(), List.of(), List.of(), List.of());
 
     Assertions.assertEquals(
         "{\"textReplacements\":[],\"entities\":[],\"ditaReferences\":[],\"xincludeReferences\":[]}",
